# CMake-Template

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.h  Constants.hpp  TempHeader.h
include/Profiling/: Instrumentor.h  Instrumentor.hpp  Timer.h  Timer.hpp
src/: CMakeLists.txt  Main.cpp
